# inspect-agentic_mcq

./: .gitignore  README.md  litqa2_package.ipynb  pyproject.toml
demo/: answer_cutoff.py  dataset_inspection.ipynb  full_demo.py  gpt_4o_mini_single_demo.py  gpt_4o_mini_test_demo.py  gpt_4o_test_demo.py  liqa2_new_benchmark.ipynb  paperqa_demo.ipynb  paperqa_demp.ipynb  paperqa_gemini_single_demo.py  paperqa_gemini_test_demo.py  paperqa_single_demo.py  paperqa_test_demo.py  reproduce_results.ipynb  single_mini_demo.py  test_demo.py  top_k_demo.py
inspect_agentic_mcq/: evaluate.py  version.py
logs/: 2025-05-20T23-18-38+01-00_custom-agent-task_Qo9eqvz4hzEB344BFzuvBL.eval  2025-05-29T16-15-48+01-00_custom-agent-task_3X2LKMrReLPKudSk4i8nRf.eval  2025-05-30T11-06-14+01-00_defualt-llm-task_6antCoPyREcs7Ha582eZd2.eval  2025-05-30T11-08-00+01-00_defualt-llm-task_3MrqiCM4Y5WqPJDKF3wSrH.eval  2025-05-30T11-08-18+01-00_defualt-llm-task_arQXNw4iPfjCpoMsFLY4LJ.eval  2025-05-30T15-57-24+01-00_custom-agent-task_D9NtmZNpZLsd6sL9Guzvys.eval  2025-05-30T16-45-13+01-00_custom-agent-task_4MZZ98HkwQjmXaGBCvYow5.eval  2025-06-12T00-28-13+01-00_custom-agent-task_AzQbkek4aLV7gtyhMyAxLF.eval  2025-06-12T00-35-21+01-00_custom-agent-task_U2EhFcYEAsdfBDFwCn8ezP.eval  2025-06-23T14-45-23+01-00_custom-agent-task_UZuBX2UMwWtC68cgZ4ovQz.eval  README.txt  cutoff_15_1.eval  cutoff_15_2.eval  cutoff_15_3.eval  cutoff_5.eval  gem_3.eval  gem_4.eval  gem_5.eval  gem_6.eval  paperqa_4o_mini_1.eval  pqa_2.eval  pqa_4.eval  pqa_4o_mini_1.eval  pqa_4o_mini_2.eval  pqa_4o_mini_3.eval  pqa_4o_mini_cutoff15_1.eval  pqa_4o_mini_cutoff15_2.eval  (+38 more)
report/: main.aux  (+10 more)
(+135 files in other folders)
