[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect_agentic_mcq"
dynamic = ["version"]
authors = [
    {name = "Phong-Anh Nguyen Trinh", email = "pan31@cam.ac.uk"}
]

description = "A package for evaluating agentic RAG systems for multiple choice questions using Inspect AI"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "inspect-ai",
    "paper-qa>=5",
    "ag2[openai]",
    "pydantic",
    "pandas"
]

[tool.setuptools]
packages = ["inspect_agentic_mcq"] 

[tool.setuptools_scm]
write_to = "inspect_agentic_mcq/version.py"